[gd_scene load_steps=2 format=3 uid="uid://bg1sjqwuts26f"]

[ext_resource type="Script" uid="uid://6otdfgio2v8g" path="res://scripts/ui/game_over_menu.gd" id="1_7nx0y"]

[node name="PopupPanel" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(122, 101)
script = ExtResource("1_7nx0y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 118.0
offset_bottom = 97.0

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main menu"
